@@ -97,7 +97,6 @@ sub sth {
     $q_rand_id    = "(random()*id+1)::int" if $dbd eq 'Pg';
 
     my %state = (
-        initialized      => qq[SELECT count(*) FROM info;],
         set_order        => qq[INSERT INTO info (attribute, text) VALUES ('markov_order', ?);],
 
         random_expr      => qq[SELECT * FROM expr WHERE id >= $q_rand_id LIMIT 1;],
