@@ -2,6 +2,15 @@ Revision history for Hailo
 
 {{$NEXT}}
 
+    - Fixed a bug on Mac OS X and probably some other
+      systems. Previously the SQLite code would assume that a file
+      that was `-s $file' was an empty database.
+
+      On Mac OS X these files weren't 0 byte but 1 byte files. Route
+      around this entire issue by creating a new API (->initialized)
+      that checks if the schema has really been created by doing a
+      query on the info table.
+
     - Solved bug in the t/storage/DBD-SQLite-memory/babble.t test. The
       test was skipped due to intermittent failures. Failures were due
       to a programming error in the tests.
